Made shell configurable
For port forwarding no shell is necessary

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -3,4 +3,5 @@
 autossh_tunnel_server_user: autossh
 autossh_tunnel_server_group: autossh
 autossh_tunnel_server_groups: []
+autossh_tunnel_server_shell: /bin/false
 autossh_tunnel_server_authorized_keys: []
