--- a/tests/test.yml
+++ b/tests/test.yml
@@ -1,6 +1,7 @@
 # test file for autossh-tunnel-server
 ---
 - hosts: localhost
-  remote_user: root
+  connection: local
+  sudo: true
   roles:
     - ../../
