--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,6 +1,7 @@
 # meta file for autossh-tunnel-server
 ---
 galaxy_info:
+  role_name: autossh-tunnel-server
   author: Mischa ter Smitten
   company: Oefenweb.nl B.V.
   description: Set up a persistent tunnel (using autossh) in Debian-like systems (server side)
@@ -12,10 +13,12 @@ galaxy_info:
         - precise
         - trusty
         - xenial
+        - bionic
     - name: Debian
       versions:
         - wheezy
         - jessie
+        - stretch
   galaxy_tags:
     - system
     - networking
