--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,4 +1,4 @@
-# defaults file for autossh-tunnel-server
+# defaults file
 ---
 autossh_tunnel_server_user: autossh
 autossh_tunnel_server_group: autossh
